--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ DerivedDataCache/
 Intermediate/
 Saved/
 
+# Unreal Engine assets (exclude Content)
+Content/
+
 # User-specific files
 *.sln
 *.suo
