--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=353E36F44A1859AF86D0118611602B2E
-ProjectName=Third Person Game Template
+ProjectID=511694B148B42DA115726B9442D773D5
+ProjectName=Inventory Template
+CopyrightNotice=Gihyeon's Inventory Project
+
