버그 드디어 고쳤다
하오 이 그지같은 언리얼엔진5.6

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=511694B148B42DA115726B9442D773D5
-ProjectName=Inventory Template
+ProjectID=C682225B4A40A8FEA1B1EAB01A9B8B3D
+ProjectName=Third Person Game Template
 CopyrightNotice=Gihyeon's Inventory Project
 
