깃 이그노어 수정
앞으로 추후 프로젝트 관리를 위한 이그노어

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,13 @@
 
 # Unreal Engine build artifacts
 Binaries/
+Build/
 DerivedDataCache/
 Intermediate/
 Saved/
+.vscode/
+.idea/
+FileOpenOrder/
 
 # Unreal Engine assets (exclude Content)
 Content/
@@ -40,4 +44,5 @@ Content/
 # --- Plugins 예외 처리 ---
 # ! 규칙은 파일 맨 마지막에 두어야 합니다.
 # Plugins/ 폴더 내의 모든 것은 무시하지 않도록 강제합니다.
-!Plugins/
+Plugins/*/Binaries/
+Plugins/*/Intermediate/
