데디서버 빌드버전으로 전환
앞으로는 5.7.1에서 관리 예정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,8 @@ ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/NewMap.NewMap
-GameDefaultMap=/Game/NewMap.NewMap
+GameDefaultMap=/Game/Maps/MenuMap.MenuMap
+ServerDefaultMap=/Game/AlienTropicalJungle/Levels/Demonstration_Night.Demonstration_Night
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
