--- a/InventoryProject.uproject
+++ b/InventoryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.7",
+	"EngineAssociation": "{7F538DF0-482A-AEA7-69C5-C78BA7B91825}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
