본격적인 멀티플레이 빌드 시스템 제작 시작

--- a/InventoryProject.uproject
+++ b/InventoryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{7F538DF0-482A-AEA7-69C5-C78BA7B91825}",
+	"EngineAssociation": "5.7",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -29,6 +29,10 @@
 		},
 		{
 			"Name": "GameplayStateTree",
+			"Enabled": true
+		},
+		{
+			"Name": "AIAssistant",
 			"Enabled": true
 		}
 	]
