아이템 두 개 참조 가능하게...

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewMap.NewMap
+EditorStartupMap=/Game/Maps/MyMap.MyMap
 GameDefaultMap=/Game/Maps/MenuMap.MenuMap
 ServerDefaultMap=/Game/AlienTropicalJungle/Levels/Demonstration_Night.Demonstration_Night
 
