--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ Build/
 Builds/
 # Unreal Engine assets (exclude Content)
 Content/
-
+Plugins/MeshDeformation/
 # User-specific files
 *.sln
 *.suo
